[package]
name = "cos-rust-sdk"
version = "0.1.0"
authors = ["flylchen <flylchen@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.18"
rust-crypto = "^0.2"
reqwest = { version = "0.10", features = ["blocking", "json", "stream"] }
urlencoding = "1.3.3"
url = "2.1.1"
async-trait = "0.1.50"
tokio = { version = "0.2.22", features = ["full"]}
log = "0.4.11"
hex = "0.4"
tokio-test = "*"